--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     depends_on:
       - backend
     environment:
-      - VITE_API_URL=http://localhost:4000
+      - BASE_URL=http://localhost:4000
