--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "frontend",
   "version": "0.0.0",
-  "homepage": "https://hashkov.github.io/email-signature-engine",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,9 +9,7 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
     "axios": "^1.7.3",
@@ -26,7 +23,6 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
-    "gh-pages": "^6.1.1",
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
     "typescript": "~5.4.0",
